# yarp_objectsDetectors

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
app/: CMakeLists.txt
app/conf/: face_label.pbtxt  objectDetector.ini
app/conf/saved_model/variables/: variables.index
src/: objectDetector.py  objectDetector.spec  utils.py
src/hooks/: hook-astor.py
